# TernVector

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  install.sh  package.json  ternlang.toml
crates/cognitum-gate-kernel/: Cargo.toml  README.md
crates/cognitum-gate-kernel/benches/: benchmarks.rs
crates/cognitum-gate-kernel/src/: canonical_witness.rs  delta.rs  evidence.rs  lib.rs  report.rs  shard.rs
crates/cognitum-gate-kernel/tests/: canonical_witness_bench.rs  security_tests.rs
crates/cognitum-gate-kernel/tests_disabled/: evidence_tests.rs  integration.rs  report_tests.rs  shard_tests.rs
crates/ruvector-attention-cli/: Cargo.toml  README.md
crates/ruvector-attention-cli/src/: main.rs
crates/ruvector-attention-cli/src/commands/: repl.rs  serve.rs
crates/ruvector-attention-cli/src/server/: mod.rs
crates/ruvector-consciousness/: Cargo.toml
crates/ruvector-consciousness/benches/: phi_benchmark.rs
crates/ruvector-consciousness/src/: arena.rs  emergence.rs  geomip.rs  iit4.rs  lib.rs  parallel.rs  pid.rs  traits.rs  types.rs  witness_phi.rs
crates/ruvector-crv/: Cargo.toml  README.md
crates/ruvector-crv/src/: session.rs  stage_i.rs  stage_iv.rs  stage_v.rs  stage_vi.rs  types.rs
crates/ruvector-graph/fuzz/: Cargo.toml
crates/ruvector-temporal-tensor-wasm/: Cargo.toml
crates/ruvector-temporal-tensor-wasm/src/: lib.rs
crates/ruvector-verified/: Cargo.toml
crates/ruvector-verified/benches/: arena_throughput.rs  proof_generation.rs
crates/ruvector-verified/src/: cache.rs  fast_arena.rs  pools.rs  vector_types.rs
crates/ternvector-attention-node/: Cargo.toml  package.json
crates/ternvector-attention-node/npm/darwin-arm64/: package.json
crates/ternvector-attention-node/npm/linux-arm64-gnu/: package.json
crates/ternvector-attention-node/npm/linux-x64-gnu/: package.json
crates/ternvector-attention-node/npm/linux-x64-musl/: package.json
crates/ternvector-attention-node/npm/win32-x64-msvc/: package.json
crates/ternvector-attention-node/src/: async_ops.rs  attention.rs  graph.rs  lib.rs  training.rs
crates/ternvector-decompiler-wasm/: Cargo.toml
crates/ternvector-decompiler-wasm/src/: lib.rs
crates/ternvector-diskann-node/: Cargo.toml
crates/ternvector-gnn-node/: Cargo.toml  README.md  build.rs
crates/ternvector-graph-transformer/: Cargo.toml  README.md
crates/ternvector-graph-transformer/src/: config.rs  lib.rs  manifold.rs  proof_gated.rs  self_organizing.rs  sublinear_attention.rs
crates/ternvector-graph-transformer/tests/: integration.rs
crates/ternvector-node/: Cargo.toml  README.md  package.json
crates/ternvector-raft/: Cargo.toml  README.md
crates/ternvector-raft/src/: election.rs  node.rs  rpc.rs  state.rs
crates/ternvector-robotics/: Cargo.toml
crates/ternvector-robotics/examples/: behavior_tree.rs  spatial_indexing.rs
crates/ternvector-robotics/src/: domain_expansion.rs  lib.rs  planning.rs  rvf.rs
crates/ternvector-robotics/tests/: integration.rs
crates/ternvector-router-ffi/: Cargo.toml  README.md
crates/ternvector-router-ffi/src/: lib.rs
crates/ternvector-verified-wasm/: Cargo.toml  README.md
crates/ternvector-verified-wasm/src/: lib.rs
examples/climate-consciousness/: Cargo.toml
examples/climate-consciousness/src/: analysis.rs  data.rs  main.rs  report.rs
examples/cmb-consciousness/: Cargo.toml
examples/cmb-consciousness/src/: analysis.rs  cross_freq.rs  data.rs  emergence_sweep.rs  healpix.rs  main.rs  report.rs
examples/dna/: Cargo.toml  README.md
examples/dna/adr/: ADR-001-vision-and-context.md  ADR-002-quantum-genomics-engine.md  ADR-003-genomic-vector-index.md  ADR-004-genomic-attention-architecture.md  ADR-005-graph-neural-protein-engine.md  ADR-006-temporal-epigenomic-engine.md  ADR-007-distributed-genomics-consensus.md  ADR-008-wasm-edge-genomics.md  ADR-009-variant-calling-pipeline.md  ADR-010-quantum-pharmacogenomics.md  ADR-011-performance-targets-and-benchmarks.md  ADR-012-genomic-security-and-privacy.md  ADR-013-rvdna-ai-native-format.md  ADR-014-health-biomarker-analysis.md  ADR-015-npm-wasm-biomarker-engine.md
examples/dna/benches/: biomarker_bench.rs  dna_bench.rs  solver_bench.rs
examples/dna/ddd/: architecture.md
examples/dna/src/: alignment.rs  biomarker.rs  biomarker_stream.rs  epigenomics.rs  error.rs  genotyping.rs  health.rs  kmer.rs  kmer_pagerank.rs  lib.rs  main.rs  pharma.rs  pipeline.rs  protein.rs  real_data.rs  rvdna.rs  types.rs  variant.rs
examples/dna/tests/: biomarker_tests.rs  kmer_tests.rs  pipeline_tests.rs  security_tests.rs
examples/edge-net/: Cargo.toml
examples/edge-net/benches/: benchmark_runner.rs
examples/edge-net/dashboard/: index.html
examples/edge-net/docs/: QDAG_ARCHITECTURE.md  README.md  security-architecture.md
examples/edge-net/pkg/: Dockerfile  README.md  cli.js  contribute-daemon.js  join.html  join.js  package.json  real-agents.js  ruvector_edge_net.d.ts  ruvector_edge_net.js  ruvector_edge_net_bg.wasm
examples/edge-net/relay/: CONSUMER_FLOW_VALIDATION_REPORT.md
examples/edge-net/sim/: COMPLETION_REPORT.md  INDEX.md  PROJECT_SUMMARY.md  README.md  SIMULATION_GUIDE.md  SIMULATION_OVERVIEW.md  USAGE.md  package.json
examples/edge-net/src/: bench.rs  lib.rs
examples/edge-net/tests/: Dockerfile.test-runner  adversarial_scenarios_test.rs  credit-persistence.test.ts  economic_edge_cases_test.rs  learning_scenarios_test.rs  manual-credit-test.cjs  mcp_integration_test.rs  performance_benchmark.rs  rac_axioms_test.rs  verify-credit-flow.js
examples/google-cloud/: Cargo.toml  Dockerfile.cloudrun  Dockerfile.gpu  Dockerfile.simple  README.md  cloudrun.yaml  deploy.sh
examples/google-cloud/src/: benchmark.rs  cuda.rs  main.rs  report.rs  self_learning.rs  server.rs  simd.rs
examples/gw-consciousness/: Cargo.toml
examples/gw-consciousness/src/: analysis.rs  data.rs  main.rs  report.rs
examples/quantum-consciousness/: Cargo.toml
examples/quantum-consciousness/src/: analysis.rs  data.rs  main.rs  report.rs
examples/train-discoveries/: Cargo.toml
examples/train-discoveries/src/: main.rs
(+4790 files in other folders)
