[package]
name = "ternvector-attention-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for ternvector-attention - High-performance attention mechanisms"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rfi-irfos/ternvector"
authors = ["RFI-IRFOS <ruv@ruv.io>"]

[[bin]]
name = "ternvector-attention"
path = "src/main.rs"

[dependencies]
ternvector-attention = { version = "2.0", path = "../ternvector-attention" }
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rustyline = "13"
indicatif = "0.17"
tabled = "0.15"
anyhow = "1.0"
rmp-serde = "1.1"

[dev-dependencies]
criterion = "0.5"
