[package]
name = "ternvector-crv"
version = "0.1.1"
edition = "2021"
authors = ["ternvector contributors"]
description = "CRV (Coordinate Remote Viewing) protocol integration for ternvector - maps 6-stage signal line methodology to vector database subsystems"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rfi-irfos/ternvector"
readme = "README.md"
keywords = ["crv", "signal-line", "vector-search", "attention", "hyperbolic"]
categories = ["algorithms", "science"]

[lib]
crate-type = ["rlib"]

[features]
default = []

[dependencies]
ternvector-attention = { version = "2.0", path = "../ternvector-attention" }
ternvector-gnn = { version = "2.0.1", path = "../ternvector-gnn", default-features = false }
ternvector-mincut = { version = "2.0.1", path = "../ternvector-mincut", default-features = false, features = ["exact"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
approx = "0.5"
