[package]
name = "ternvector-temporal-tensor-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "WASM bindings for temporal tensor compression"

[dependencies]
ternvector-temporal-tensor = { path = "../ternvector-temporal-tensor", features = ["ffi"] }

[lib]
crate-type = ["cdylib"]
