[package]
name = "ternvector-graph-transformer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Unified graph transformer with proof-gated mutation substrate — 8 verified modules for physics, biological, manifold, temporal, and economic graph intelligence"
readme = "README.md"
keywords = ["graph-transformer", "proof-gated", "attention", "verified", "neural-network"]
categories = ["science", "mathematics", "algorithms"]

[features]
default = ["sublinear", "verified-training"]
sublinear = []
physics = []
biological = []
self-organizing = []
verified-training = []
manifold = []
temporal = []
economic = []
full = ["sublinear", "physics", "biological", "self-organizing", "verified-training", "manifold", "temporal", "economic"]

[dependencies]
ternvector-verified = { version = "0.1", path = "../ternvector-verified", features = ["ultra", "hnsw-proofs"] }
ternvector-gnn = { version = "2.0", path = "../ternvector-gnn" }
ternvector-attention = { version = "2.0", path = "../ternvector-attention" }
ternvector-mincut = { version = "2.1.0", path = "../ternvector-mincut" }
ternvector-solver = { version = "2.0", path = "../ternvector-solver" }
ternvector-coherence = { version = "2.0", path = "../ternvector-coherence" }
serde = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
