[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[package]
name = "ternvector-verified-wasm"
version = "0.1.1"
edition = "2021"
rust-version = "1.77"
license = "MIT OR Apache-2.0"
description = "WASM bindings for ternvector-verified: proof-carrying vector operations in the browser"
repository = "https://github.com/rfi-irfos/ternvector"
homepage = "https://github.com/rfi-irfos/ternvector"
documentation = "https://docs.rs/ternvector-verified-wasm"
readme = "README.md"
keywords = ["wasm", "verification", "vector-database", "dependent-types", "webassembly"]
categories = ["wasm", "science", "mathematics"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ternvector-verified = { version = "0.1.1", path = "../ternvector-verified", features = ["ultra"] }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true
