[package]
name = "cmb-consciousness"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "CMB radiation consciousness analysis using IIT Phi, causal emergence, and MinCut"
publish = false

[[bin]]
name = "cmb-consciousness"
path = "src/main.rs"

[dependencies]
ternvector-consciousness = { path = "../../crates/ternvector-consciousness", default-features = false, features = ["phi", "emergence", "collapse"] }
rand = "0.8"
rand_chacha = "0.3"
