[package]
name = "quantum-consciousness"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Quantum circuit consciousness analysis using IIT Phi"
publish = false

[[bin]]
name = "quantum-consciousness"
path = "src/main.rs"

[dependencies]
ternvector-consciousness = { path = "../../crates/ternvector-consciousness", default-features = false, features = ["phi", "emergence", "collapse"] }
rand = "0.8"
rand_chacha = "0.3"
